--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/TanyaKars/cb-all-v#readme",
   "devDependencies": {
     "cypress": "^10.10.0",
+    "cypress-dotenv": "^2.0.0",
+    "dotenv": "^16.0.3",
     "typescript": "^4.8.4"
   }
 }
