--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/TanyaKars/cb-all-v#readme",
   "devDependencies": {
-    "cypress": "^10.10.0",
+    "axe-core": "^4.5.0",
+    "cypress": "^10.11.0",
+    "cypress-axe": "^1.0.0",
     "cypress-dotenv": "^2.0.0",
     "dotenv": "^16.0.3",
     "typescript": "^4.8.4"
