--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -22,6 +22,8 @@ jobs:
           spec: cypress/e2e/v-1/${{ matrix.containers }}.cy.ts
           config-file: cypress.v1.config.ts
           env: configFile=v1
+        env:
+          - TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
       - name: Store screenshot artifacts
         uses: actions/upload-artifact@v3
         if: failure()
