--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -26,4 +26,4 @@ jobs:
           config-file: cypress.v1.config.ts
           env: configFile=v1
         env:
-          - TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
+          TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
