--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -12,7 +12,7 @@ jobs:
         containers: [ home, login ]
     defaults:
       run:
-        working-directory: cb
+        working-directory: ./
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -21,7 +21,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          working-directory: cb
+          working-directory: ./
           spec: cypress/e2e/v-1/${{ matrix.containers }}.cy.ts
           config-file: cypress.v1.config.ts
           env: configFile=v1
