--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -1,6 +1,10 @@
 name: clientBase v1
 on:
+   push:
+   branches: [main]
   workflow_dispatch:
+  env:
+    TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
 jobs:
   version1:
     name: RUN TESTS - V1
@@ -25,5 +29,9 @@ jobs:
           spec: cypress/e2e/v_1/${{ matrix.containers }}.cy.ts
           config-file: cypress.v1.config.ts
           env: configFile=v1
-        env:
-          TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
+      - name: Store screenshot artifacts
+          uses: actions/upload-artifact@v3
+          if: failure()
+          with:
+            name: e2e-screenshots-${{ matrix.containers }}
+            path: ./e2e/cypress/results
