--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -1,7 +1,7 @@
 name: clientBase v1
 on:
    push:
-   branches: [main]
+   branches: main
   workflow_dispatch:
   env:
     TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
