--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -33,4 +33,4 @@ jobs:
         if: failure()
         with:
           name: e2e-screenshots-${{ matrix.containers }}
-          path: ./e2e/cypress/results
+          path: ./cypress/results/
