--- a/.github/workflows/version-one.yaml
+++ b/.github/workflows/version-one.yaml
@@ -1,16 +1,16 @@
 name: clientBase v1
 on:
-#  push:
-  workflow_dispatch:
+#  push: # tests will run after each push
+  workflow_dispatch: # tests will run from GH on demand
 jobs:
   version1:
     name: RUN TESTS - V1
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # uses container
     strategy:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [ home, login ]
+        containers: [ home, login ] # the names must match the names of the specs to use it farther in spec path
     defaults:
       run:
         working-directory: ./
@@ -27,7 +27,7 @@ jobs:
           config-file: cypress.v1.config.ts
           env: configFile=v1
         env:
-          TEST_USER_1: ${{ secrets.P_TEST_USER_1 }}
+          TEST_USER_1: ${{ secrets.P_TEST_USER_1 }} # sets up in repo's configuration in GH
       - name: Store screenshot artifacts
         uses: actions/upload-artifact@v3
         if: failure()
