--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/TanyaKars/cb-all-v#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "axe-core": "^4.5.0",
     "cypress": "^10.11.0",
     "cypress-axe": "^1.0.0",
