--- a/.github/workflows/trigger-e2e-when-ready.yaml
+++ b/.github/workflows/trigger-e2e-when-ready.yaml
@@ -26,11 +26,17 @@ jobs:
         run: sleep 30
       - name: Trigger e2e-dev workflow
         run: |
+          echo "curl -X POST \
+          -H 'Accept: application/vnd.github.v3+json' \
+          -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/version-one.yaml/dispatches \
+          -d '{\"ref\":\"${{ github.head_ref }}\"}'"
           curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/tanyakars/cb-all-v/actions/workflows/version-one.yaml/dispatches \
-            -d '{"ref":"${{ github.head_ref }}"}'
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/version-one.yaml/dispatches \
+          -d '{"ref":"${{ github.head_ref }}"}'
+       
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
